# stocky

./: .env.example  .gitignore  AGENTS.md  INDEX.md  README.md  pyproject.toml  stocky.drawio
.playwright-mcp/: page-2026-05-27T23-00-28-703Z.yml  page-2026-05-27T23-02-28-102Z.yml  page-2026-05-27T23-02-58-741Z.yml  page-2026-05-27T23-09-08-834Z.yml  page-2026-05-27T23-09-17-340Z.yml  page-2026-05-27T23-09-56-433Z.yml
backend/: agent.py  config.py  tools.py
backend/api/: app.py  deps.py  exceptions.py  routers.py
backend/db/: supabase.py
backend/schemas/: __init__.py  ai.py  auth.py  financeiro.py  lote.py  movimentacao.py  perfil.py  produto.py
backend/services/: ai_insight_service.py  ai_service.py  batch_service.py  financial_service.py  movement_service.py  product_service.py  profile_service.py
backend/tests/: test_ai_insight_service.py  test_ai_insights_endpoint.py  test_auth_dependency.py  test_config.py  test_seed_test_data.py
docs/: ADR.md  MOBILE_TEST_RUNBOOK.md  PRD.md  ROADMAP.md  SETUP.md
docs/adr/: 0001-lean-documentation.md  0002-stack-and-surfaces.md  0003-auth-rbac-and-data.md  0004-ai-architecture.md  0005-deploy-model.md  0006-backend-api-architecture.md  TEMPLATE.md
docs/architecture/: ai-modules.html  api-endpoints.html  db-schema.html  nextjs-screens.html  rn-screens.html  system-overview.html
docs/plans/: ROADMAP.md
docs/source/: conf.py  index.rst
frontend/app/: _utils.py  app.py
mobile/: App.js  app.json  package-lock.json  package.json
mobile/src/: components.js  (+1 more)
scripts/: seed_test_data.py
supabase/: config.toml
(+67 files in other folders)
