[project]
name = "stocky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.2.2",
    "markdownify>=1.2.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sphinx>=9.1.0",
    "streamlit>=1.57.0",
    "supabase>=2.30.0",
    "tavily-python>=0.7.24",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ruff>=0.15.14",
]
